--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,75 +1,70 @@
-# Tmux mode
-setw -g mode-keys vi
+set -g mouse on
+set set-clipboard on
 
-set -g default-command zsh
-
-# Improve colors
-# Run ~/.dotmodules/inventory/tmux-256color.sh is you don't have tmux-256color.
-set -g default-terminal "tmux-256color"
-set -ga terminal-overrides ",*:RGB"
-set -ga terminal-overrides ',*:Tc'
+# vim-like pane switching
+bind -r k select-pane -U 
+bind -r j select-pane -D 
+bind -r h select-pane -L 
+bind -r l select-pane -R 
 
 # Set scrollback buffer to 10000
 set -g history-limit 1000000
 
-# Window number counts from 1
-set -g base-index 1
+set-window-option -g mode-keys vi
+bind-key -T copy-mode-vi v send -X begin-selection
+bind-key -T copy-mode-vi V send -X select-line
+bind-key -T copy-mode-vi y send -X copy-pipe-and-cancel 'xclip -in -selection clipboard'
 
-# OSC support
-set -s set-clipboard on
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'tmux-plugins/tmux-resurrect'
 
-# Automatically set window title
-set-window-option -g automatic-rename on
-set-option -g set-titles on
+set -g @plugin 'catppuccin/tmux#latest'
+set -g @catppuccin_flavor 'mocha'
 
-# Renumber window indices from 1
-set-option -g renumber-windows on
+set -g @resurrect-strategy-vim 'session'
 
-# Vim style pane selection
-bind-key h select-pane -L
-bind-key j select-pane -D
-bind-key k select-pane -U
-bind-key l select-pane -R
+set -g @plugin 'tmux-plugins/tmux-yank'
 
-# Vim style pane resize
-bind-key H resize-pane -L 5
-bind-key J resize-pane -D 5
-bind-key K resize-pane -U 5
-bind-key L resize-pane -R 5
+run '~/.tmux/plugins/tpm/tpm'
+
+# bind-key -r -T prefix       M-Up              resize-pane -U
+# bind-key -r -T prefix       M-Down            resize-pane -D
+# bind-key -r -T prefix       M-Left            resize-pane -L
+# bind-key -r -T prefix       M-Right           resize-pane -R
+bind-key -r -T prefix       C-k                resize-pane -U
+bind-key -r -T prefix       C-j                resize-pane -D
+bind-key -r -T prefix       C-h                resize-pane -L
+bind-key -r -T prefix       C-l                resize-pane -R
 
 # Window split
 bind-key v split-window -h -c "#{pane_current_path}"
-bind-key s split-window -v -c "#{pane_current_path}"
+# swap ' and "
+unbind-key "'"
+unbind-key '"'
+bind-key "'" split-window -v -c "#{pane_current_path}"
+bind-key '"' command-prompt -p index "select-window -t ':%%'"
 
-# Do not confirm window kill
-bind-key & kill-window
-bind-key x kill-pane
+set-option repeat-time 100
 
-# Copy mode
-bind-key -T copy-mode-vi v   send-keys -X begin-selection
-bind-key -T copy-mode-vi C-v send-keys -X rectangle-toggle
-bind-key -T copy-mode-vi y   send-keys -X copy-selection-and-cancel
+# renumbe
+set-option -g renumber-windows on
 
-# No delay for escape key press
-set -sg escape-time 0
+# status line
+set -gF status-style "bg=#{@ctp_bg},fg=#{@ctp_fg}"
 
-# Tmux Plugin Manager
-set -g @plugin 'tmux-plugins/tpm'
+# show the session name at the left corner
+set-window-option -g status-left "#[fg=brightyellow,bg=black] #S #[default]"
+set -gF window-status-format "#[bg=#{@ctp_surface_1},fg=#{@ctp_fg}] ##I ##W "
+set -gF window-status-current-format "#[bg=#{@ctp_mauve},fg=#{@ctp_crust}] ##I ##W "
+set-option -g automatic-rename on
 
-# Colorscheme
-set -g @plugin 'catppuccin/tmux'
-set -g @catppuccin_flavour 'mocha'
-set -g @catppuccin_window_default_text "#W | #{b:pane_current_path}"
-set -g @catppuccin_window_current_text "#W | #{b:pane_current_path}"
-set -g @catppuccin_status_modules_right "user host date_time session"
-set -g @catppuccin_window_left_separator ""
-set -g @catppuccin_window_right_separator " "
+# unbind-key ,
+# bind-key , command-prompt -I "#T" "select-pane -T '%%'"
+# set-window-option -g status-left " #S "
 
-# vim-tmux-navigator
-set -g @plugin 'jaywonchung/vim-tmux-navigator'
+# Start windows and panes at 1, not 0
+set -g base-index 1
+setw -g pane-base-index 1
 
-# copy text with y
-set -g @plugin 'tmux-plugins/tmux-yank'
-
-# Initialize plugins
-run '~/.tmux/plugins/tpm/tpm'
+set -g default-command zsh
