--- a/.tmux.conf
+++ b/.tmux.conf
@@ -45,18 +45,18 @@ unbind-key '"'
 bind-key "'" split-window -v -c "#{pane_current_path}"
 bind-key '"' command-prompt -p index "select-window -t ':%%'"
 
-set-option repeat-time 100
+set-option -g repeat-time 100
 
 # renumbe
 set-option -g renumber-windows on
 
 # status line
-set -gF status-style "bg=#{@ctp_bg},fg=#{@ctp_fg}"
+# set -gF status-style "bg=#{@ctp_bg},fg=#{@ctp_fg}"
 
 # show the session name at the left corner
 set-window-option -g status-left "#[fg=brightyellow,bg=black] #S #[default]"
-set -gF window-status-format "#[bg=#{@ctp_surface_1},fg=#{@ctp_fg}] ##I ##W "
-set -gF window-status-current-format "#[bg=#{@ctp_mauve},fg=#{@ctp_crust}] ##I ##W "
+# set -gF window-status-format "#[bg=#{@ctp_surface_1},fg=#{@ctp_fg}] ##I ##W "
+# set -gF window-status-current-format "#[bg=#{@ctp_mauve},fg=#{@ctp_crust}] ##I ##W "
 set-option -g automatic-rename on
 
 # unbind-key ,
