set up direnv (not fully working)

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -26,16 +26,23 @@ set -g @resurrect-strategy-vim 'session'
 
 set -g @plugin 'tmux-plugins/tmux-yank'
 
+set -g @plugin 'christoomey/vim-tmux-navigator'
+
+bind C-l send-keys 'C-l'
+
+# set -g @vim_navigator_mapping_left "C-Left C-h"  # use C-h and C-Left
+# set -g @vim_navigator_mapping_right "C-Right C-l"
+# set -g @vim_navigator_mapping_up "C-k"
+# set -g @vim_navigator_mapping_down "C-j"
+set -g @vim_navigator_mapping_prev ""  # removes the C-\ binding
+set -g @vim_navigator_mapping_right ""
+
 run '~/.tmux/plugins/tpm/tpm'
 
-# bind-key -r -T prefix       M-Up              resize-pane -U
-# bind-key -r -T prefix       M-Down            resize-pane -D
-# bind-key -r -T prefix       M-Left            resize-pane -L
-# bind-key -r -T prefix       M-Right           resize-pane -R
-bind-key -r -T prefix       C-k                resize-pane -U
-bind-key -r -T prefix       C-j                resize-pane -D
-bind-key -r -T prefix       C-h                resize-pane -L
-bind-key -r -T prefix       C-l                resize-pane -R
+# bind-key -r -T prefix       C-k                resize-pane -U
+# bind-key -r -T prefix       C-j                resize-pane -D
+# bind-key -r -T prefix       C-h                resize-pane -L
+# bind-key -r -T prefix       C-l                resize-pane -R
 
 # Window split
 bind-key v split-window -h -c "#{pane_current_path}"
